[gd_scene load_steps=8 format=3 uid="uid://diwc782xe7aw1"]

[ext_resource type="Script" uid="uid://coq5ljd0rkn17" path="res://scenes/battle/enemysprite.gd" id="1_5itas"]
[ext_resource type="Texture2D" uid="uid://dry6xkf7q8c34" path="res://assets/sprite/characters/party/shadow/enemypart/shadow_face.png" id="1_jgmrr"]
[ext_resource type="Texture2D" uid="uid://1id6kbtf5h4n" path="res://assets/sprite/characters/party/shadow/enemypart/shadow_hair.png" id="2_5itas"]
[ext_resource type="Texture2D" uid="uid://i2hlkgqnf3oc" path="res://assets/sprite/characters/party/shadow/enemypart/shadow_torso.png" id="3_sqetx"]
[ext_resource type="Texture2D" uid="uid://otvlkqhktjcc" path="res://assets/sprite/characters/party/shadow/enemypart/shadow_hand_r.png" id="4_t03hr"]
[ext_resource type="Texture2D" uid="uid://d0aibe6s6l588" path="res://assets/sprite/characters/party/shadow/enemypart/shadow_hand_l.png" id="5_axxpp"]
[ext_resource type="Texture2D" uid="uid://c16hu8ypwb34t" path="res://assets/sprite/characters/party/shadow/enemypart/shadow_down.png" id="6_gm182"]

[node name="enemy" type="Node2D"]
script = ExtResource("1_5itas")

[node name="enemy_face" type="Sprite2D" parent="."]
position = Vector2(0, -40)
texture = ExtResource("1_jgmrr")

[node name="enemy_hair" type="Sprite2D" parent="."]
position = Vector2(0, -40)
texture = ExtResource("2_5itas")

[node name="enemy_torso" type="Sprite2D" parent="."]
texture = ExtResource("3_sqetx")

[node name="enemy_hand_r" type="Sprite2D" parent="."]
position = Vector2(-28, 0)
texture = ExtResource("4_t03hr")

[node name="enemy_hand_l" type="Sprite2D" parent="."]
position = Vector2(28, 0)
texture = ExtResource("5_axxpp")

[node name="enemy_down" type="Sprite2D" parent="."]
position = Vector2(0, 48)
texture = ExtResource("6_gm182")
